<resources>
    <string name="app_name">Tugas</string>
    <string name="pendaftaran">PENDAFTARAN</string>
    <string name="namaDepan">Nama Depan</string>
    <string name="namaBelakang">Nama Belakang</string>
    <string name="tempatLahir">Tempat Lahir</string>
    <string name="tanggalLahir">Tanggal Lahir</string>
    <string name="Alamat">Alamat</string>
    <string name="jenisKelamin">Jenis Kelamin</string>
    <string name="lakiLaki">Laki-Laki</string>
    <string name="Perempuan">Perempuan</string>
    <string name="Agama">Agama</string>
    <string name="Islam">Islam</string>
    <string name="katolik">Katolik</string>
    <string name="buddha">Buddha</string>
    <string name="alirankepercayaan">Aliran Kepercayaan</string>
    <string name="kristen">Kristen</string>
    <string name="hindu">Hindu</string>
    <string name="konghuchu">Konghuchu</string>
    <string name="telepon">Telepon</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="masukkankembai">Masukkan Password Kembali</string>
    <string name="kembali">Kembali</string>
    <string name="daftar">Daftar</string>
    <string name="empty_name">Nama Depan Harus Diisi</string>
    <string name="empty_name2">Nama Belakang Harus Diisi</string>
    <string name="empty_place">Tempat Lahir Harus Diisi</string>
    <string name="empty_date">Tanggal Lahir Harus Diisi</string>
    <string name="empty_address">Alamat Harus Diisi</string>
    <string name="empty_email">Email Harus Diisi</string>
    <string name="empty_password">Password Harus Diisi</string>
    <string name="empty_phone">Nomor Telepon Harus Diisi</string>
    <string name="pendaftaranBerhasil">Pendaftaran Berhasil</string>
    <string name="namaDepan2">Nama Depan:</string>
    <string name="namaBelakang2">Nama Belakang:</string>
    <string name="TTL">Tempat Tanggal Lahir:</string>
    <string name="alamat2">Alamat:</string>
    <string name="JK2">Jenis Kelamin:</string>
    <string name="agama">Agama:</string>
    <string name="notelp">Nomor Telepon:</string>
    <string name="email2">Email:</string>
    <string name="keluarApk">KELUAR APLIKASI</string>
    <string name="oke">OKE</string>
    <string name="detailPendaftaran">Detail Pendaftaran</string>
    <string name="invalid_password"><![CDATA[Panjang password minimal adalah 8 karakter dengan angka, huruf besar, huruf kecil, dan spesial karakter (seperti: @, &amp;, #, ?)]]></string>
    <string name="invalid_email">Format Email Salah</string>
</resources>
